--- a/example/03-koa/03-body-parsing/index.html
+++ b/example/03-koa/03-body-parsing/index.html
@@ -1,4 +1,4 @@
-<form action="uppercase" method="post">
+<form action="/uppercase" method="post">
   <input name="name" type="text"/>
   <input type="submit" value="送出"/>
 </form>
